--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-torch>=1.1
-torchvision
-numpy
-tqdm
-tensorboard>=1.14
+numpy==1.21.5
+matplotlib==3.5.1
+torch==1.11.0
+torchvision==0.12.0
+hdbscan==0.8.28
+perl==5.26.2
